@@ -190,23 +190,25 @@ int crittable(MECH * mech, int loc, int tres)
 {
     int d;
 
+    if (MechSpecials(mech) & CRITPROOF_TECH)
+        return 0;
     if (MechMove(mech) == MOVE_NONE)
-	return 0;
+        return 0;
     if (!GetSectOArmor(mech, loc))
-	return 1;
+        return 1;
     if (MechType(mech) != CLASS_MECH && mudconf.btech_vcrit <= 1)
-	return 0;
+        return 0;
     d = (100 * GetSectArmor(mech, loc)) / GetSectOArmor(mech, loc);
     if (d < tres)
-	return 1;
+        return 1;
     if (d == 100) {
-	if (Number(1, 71) == 23)
-	    return 1;
-	return 0;
+        if (Number(1, 71) == 23)
+            return 1;
+        return 0;
     }
     if (d < (100 - ((100 - tres) / 2)))
-	if (Number(1, 11) == 6)
-	    return 1;
+        if (Number(1, 11) == 6)
+            return 1;
     return 0;
 }
 
@@ -1387,6 +1389,510 @@ int FindAdvFasaVehicleHitLocation(MECH * mech, int hitGroup,
     return hitloc;
 }
 
+/* Use this when the unit is CRITPROOF because the other
+ * hitlocation functions are screwy */
+int FindHitLocation_CritProof(MECH * mech, int hitGroup, int *iscritical,
+        int *isrear)
+{
+    int roll, hitloc = 0;
+    int side;
+
+    roll = Roll();
+
+    /* Since we're crit proof set this to 0 */
+    *iscritical = 0;
+
+    if (MechStatus(mech) & COMBAT_SAFE)
+        return 0;
+
+    if (MechDugIn(mech) && GetSectOInt(mech, TURRET) && Number(1, 100) >= 42)
+        return TURRET;
+
+    rollstat.hitrolls[roll - 2]++;
+    rollstat.tothrolls++;
+    switch (MechType(mech)) {
+        case CLASS_BSUIT:
+            if ((hitloc = get_bsuit_hitloc(mech)) < 0)
+                return Number(0, NUM_BSUIT_MEMBERS - 1);
+        case CLASS_MW:
+        case CLASS_MECH:
+            switch (hitGroup) {
+                case LEFTSIDE:
+                    switch (roll) {
+                        case 2:
+                            return LTORSO;
+                        case 3:
+                            return LLEG;
+                        case 4:
+                        case 5:
+                            return LARM;
+                        case 6:
+                            return LLEG;
+                        case 7:
+                            return LTORSO;
+                        case 8:
+                            return CTORSO;
+                        case 9:
+                            return RTORSO;
+                        case 10:
+                            return RARM;
+                        case 11:
+                            return RLEG;
+                        case 12:
+                            return HEAD;
+                    }
+                case RIGHTSIDE:
+                    switch (roll) {
+                        case 2:
+                            return RTORSO;
+                        case 3:
+                            return RLEG;
+                        case 4:
+                        case 5:
+                            return RARM;
+                        case 6:
+                            return RLEG;
+                        case 7:
+                            return RTORSO;
+                        case 8:
+                            return CTORSO;
+                        case 9:
+                            return LTORSO;
+                        case 10:
+                            return LARM;
+                        case 11:
+                            return LLEG;
+                        case 12:
+                            return HEAD;
+                    }
+                case FRONT:
+                case BACK:
+                    switch (roll) {
+                        case 2:
+                            return CTORSO;
+                        case 3:
+                        case 4:
+                            return RARM;
+                        case 5:
+                            return RLEG;
+                        case 6:
+                            return RTORSO;
+                        case 7:
+                            return CTORSO;
+                        case 8:
+                            return LTORSO;
+                        case 9:
+                            return LLEG;
+                        case 10:
+                        case 11:
+                            return LARM;
+                        case 12:
+                            return HEAD;
+                    }
+            }
+            break;
+        case CLASS_VEH_GROUND:
+            switch (hitGroup) {
+                case LEFTSIDE:
+                    switch (roll) {
+                        case 2:
+                        case 12:
+                            return LSIDE;
+                        case 3:
+                        case 4:
+                        case 5:
+                        case 6:
+                        case 7:
+                        case 8:
+                        case 9:
+                            return LSIDE;
+                        case 10:
+                            return (GetSectInt(mech, TURRET)) ? TURRET : LSIDE;
+                        case 11:
+                            if (GetSectInt(mech, TURRET)) {
+                                return TURRET;
+                            } else
+                                return LSIDE;
+                    }
+                    break;
+                case RIGHTSIDE:
+                    switch (roll) {
+                        case 2:
+                        case 12:
+                            return RSIDE;
+                        case 3:
+                        case 4:
+                        case 5:
+                        case 6:
+                        case 7:
+                        case 8:
+                        case 9:
+                            return RSIDE;
+                        case 10:
+                            return (GetSectInt(mech, TURRET)) ? TURRET : RSIDE;
+                        case 11:
+                            if (GetSectInt(mech, TURRET)) {
+                                return TURRET;
+                            } else
+                                return RSIDE;
+                            break;
+                    }
+                    break;
+
+                case FRONT:
+                case BACK:
+                    side = (hitGroup == FRONT ? FSIDE : BSIDE);
+                    switch (roll) {
+                        case 2:
+                        case 12:
+                            return side;
+                        case 3:
+                        case 4:
+                        case 5:
+                        case 6:
+                        case 7:
+                        case 8:
+                        case 9:
+                            return side;
+                        case 10:
+                            return (GetSectInt(mech, TURRET)) ? TURRET : side;
+                        case 11:
+                            if (GetSectInt(mech, TURRET)) {
+                                return TURRET;
+                            } else
+                                return side;
+                    }
+            }
+            break;
+        case CLASS_AERO:
+            switch (hitGroup) {
+                case FRONT:
+                    switch (roll) {
+                        case 2:
+                        case 12:
+                            return AERO_COCKPIT;
+                        case 3:
+                        case 11:
+                            return AERO_NOSE;
+                        case 4:
+                        case 10:
+                            return AERO_FUSEL;
+                        case 5:
+                            return AERO_RWING;
+                        case 9:
+                            return AERO_LWING;
+                        case 6:
+                        case 7:
+                        case 8:
+                            return AERO_NOSE;
+                    }
+                    break;
+                case LEFTSIDE:
+                case RIGHTSIDE:
+                    side = ((hitGroup == LEFTSIDE) ? AERO_LWING : AERO_RWING);
+                    switch (roll) {
+                        case 2:
+                            return AERO_COCKPIT;
+                        case 12:
+                            return AERO_ENGINE;
+                        case 3:
+                        case 11:
+                            return side;
+                        case 4:
+                        case 10:
+                            return AERO_ENGINE;
+                        case 5:
+                            return AERO_FUSEL;
+                        case 9:
+                            return AERO_NOSE;
+                        case 6:
+                        case 8:
+                            return side;
+                        case 7:
+                            return AERO_FUSEL;
+                    }
+                    break;
+                case BACK:
+                    switch (roll) {
+                        case 2:
+                        case 12:
+                            return AERO_ENGINE;
+                        case 3:
+                        case 11:
+                            return AERO_FUSEL;
+                        case 4:
+                        case 7:
+                        case 10:
+                            return AERO_FUSEL;
+                        case 5:
+                            return AERO_RWING;
+                        case 9:
+                            return AERO_LWING;
+                        case 6:
+                        case 8:
+                            return AERO_ENGINE;
+                    }
+            }
+            break;
+        case CLASS_DS:
+        case CLASS_SPHEROID_DS:
+            switch (hitGroup) {
+                case FRONT:
+                    switch (roll) {
+                        case 2:
+                        case 12:
+                            return DS_NOSE;
+                        case 3:
+                        case 11:
+                            return DS_NOSE;
+                        case 5:
+                            return DS_RWING;
+                        case 6:
+                        case 7:
+                        case 8:
+                            return DS_NOSE;
+                        case 9:
+                            return DS_LWING;
+                        case 4:
+                        case 10:
+                            return (Number(1, 2)) == 1 ? DS_LWING : DS_RWING;
+                    }
+                case LEFTSIDE:
+                case RIGHTSIDE:
+                    side = (hitGroup == LEFTSIDE) ? DS_LWING : DS_RWING;
+                    if (Number(1, 2) == 2)
+                        SpheroidToRear(mech, side);
+                    switch (roll) {
+                        case 2:
+                            return DS_NOSE;
+                        case 3:
+                        case 11:
+                            return side;
+                        case 4:
+                        case 5:
+                        case 6:
+                        case 7:
+                        case 8:
+                        case 10:
+                            return side;
+                        case 9:
+                            return DS_NOSE;
+                        case 12:
+                            return side;
+                    }
+                case BACK:
+                    switch (roll) {
+                        case 2:
+                        case 12:
+                            return DS_AFT;
+                        case 3:
+                        case 11:
+                            return DS_AFT;
+                        case 4:
+                        case 7:
+                        case 10:
+                            return DS_AFT;
+                        case 5:
+                            hitloc = DS_RWING;
+                            SpheroidToRear(mech, hitloc);
+                            return hitloc;
+                        case 6:
+                        case 8:
+                            return DS_AFT;
+                        case 9:
+                            hitloc = DS_LWING;
+                            SpheroidToRear(mech, hitloc);
+                            return hitloc;
+                    }
+            }
+            break;
+        case CLASS_VTOL:
+            switch (hitGroup) {
+                case LEFTSIDE:
+                    switch (roll) {
+                        case 2:
+                            hitloc = ROTOR;
+                            break;
+                        case 3:
+                        case 4:
+                            hitloc = ROTOR;
+                            break;
+                        case 5:
+                        case 6:
+                        case 7:
+                        case 8:
+                        case 9:
+                            hitloc = LSIDE;
+                            break;
+                        case 10:
+                        case 11:
+                            hitloc = ROTOR;
+                            break;
+                        case 12:
+                            hitloc = ROTOR;
+                            break;
+                    }
+                    break;
+
+                case RIGHTSIDE:
+                    switch (roll) {
+                        case 2:
+                            hitloc = ROTOR;
+                            break;
+                        case 3:
+                        case 4:
+                            hitloc = ROTOR;
+                            break;
+                        case 5:
+                        case 6:
+                        case 7:
+                        case 8:
+                        case 9:
+                            hitloc = RSIDE;
+                            break;
+                        case 10:
+                        case 11:
+                            hitloc = ROTOR;
+                            break;
+                        case 12:
+                            hitloc = ROTOR;
+                            break;
+                    }
+                    break;
+
+                case FRONT:
+                case BACK:
+                    side = (hitGroup == FRONT ? FSIDE : BSIDE);
+                    switch (roll) {
+                        case 2:
+                            hitloc = ROTOR;
+                            break;
+                        case 3:
+                        case 4:
+                            hitloc = ROTOR;
+                            break;
+                        case 5:
+                        case 6:
+                        case 7:
+                        case 8:
+                        case 9:
+                            hitloc = side;
+                            break;
+                        case 10:
+                        case 11:
+                            hitloc = ROTOR;
+                            break;
+                        case 12:
+                            hitloc = ROTOR;
+                            break;
+                    }
+                    break;
+            }
+            break;
+        case CLASS_VEH_NAVAL:
+            switch (hitGroup) {
+                case LEFTSIDE:
+                    switch (roll) {
+                        case 2:
+                            hitloc = LSIDE;
+                            break;
+                        case 3:
+                        case 4:
+                        case 5:
+                            hitloc = LSIDE;
+                            break;
+                        case 9:
+                            hitloc = LSIDE;
+                            break;
+                        case 10:
+                            if (GetSectInt(mech, TURRET))
+                                hitloc = TURRET;
+                            else
+                                hitloc = LSIDE;
+                            break;
+                        case 11:
+                            if (GetSectInt(mech, TURRET)) {
+                                hitloc = TURRET;
+                            } else
+                                hitloc = LSIDE;
+                            break;
+                        case 12:
+                            hitloc = LSIDE;
+                            break;
+                    }
+                    break;
+
+                case RIGHTSIDE:
+                    switch (roll) {
+                        case 2:
+                        case 12:
+                            hitloc = RSIDE;
+                            break;
+                        case 3:
+                        case 4:
+                        case 5:
+                        case 6:
+                        case 7:
+                        case 8:
+                            hitloc = RSIDE;
+                            break;
+                        case 10:
+                            if (GetSectInt(mech, TURRET))
+                                hitloc = TURRET;
+                            else
+                                hitloc = RSIDE;
+                            break;
+                        case 11:
+                            if (GetSectInt(mech, TURRET)) {
+                                hitloc = TURRET;
+                            } else
+                                hitloc = RSIDE;
+                            break;
+                    }
+                    break;
+
+                case FRONT:
+                case BACK:
+                    switch (roll) {
+                        case 2:
+                        case 12:
+                            hitloc = FSIDE;
+                            break;
+                        case 3:
+                            hitloc = FSIDE;
+                            break;
+                        case 4:
+                            hitloc = FSIDE;
+                            break;
+                        case 5:
+                            hitloc = FSIDE;
+                            break;
+                        case 6:
+                        case 7:
+                        case 8:
+                        case 9:
+                            hitloc = FSIDE;
+                            break;
+                        case 10:
+                            if (GetSectInt(mech, TURRET))
+                                hitloc = TURRET;
+                            else
+                                hitloc = FSIDE;
+                            break;
+                        case 11:
+                            if (GetSectInt(mech, TURRET)) {
+                                hitloc = TURRET;
+                            } else
+                                hitloc = FSIDE;
+                            break;
+                    }
+                    break;
+            }
+            break;
+    }
+    return (hitloc);
+}
+
 int FindHitLocation(MECH * mech, int hitGroup, int *iscritical,
         int *isrear)
 {
@@ -1396,11 +1902,15 @@ int FindHitLocation(MECH * mech, int hitGroup, int *iscritical,
     roll = Roll();
 
     /* We have a varying set of crit charts we can use, so let's see what's been config'd */
+    /* We call the FindHitLocation_CritProof after the adv fasa hit loc function because
+     * it already has a check built in for critproof (lookup crittable), the others don't */
     switch (MechType(mech)) {
         case CLASS_VTOL:
             if (mudconf.btech_fasaadvvtolcrit)
                 return FindAdvFasaVehicleHitLocation(mech, hitGroup,
                         iscritical, isrear);
+            else if (MechSpecials(mech) & CRITPROOF_TECH)
+                return FindHitLocation_CritProof(mech, hitGroup, iscritical, isrear);
             else if (mudconf.btech_fasacrit)
                 return FindFasaHitLocation(mech, hitGroup, iscritical, isrear);
             break;
@@ -1408,11 +1918,15 @@ int FindHitLocation(MECH * mech, int hitGroup, int *iscritical,
             if (mudconf.btech_fasaadvvhlcrit)
                 return FindAdvFasaVehicleHitLocation(mech, hitGroup,
                         iscritical, isrear);
+            else if (MechSpecials(mech) & CRITPROOF_TECH)
+                return FindHitLocation_CritProof(mech, hitGroup, iscritical, isrear);
             else if (mudconf.btech_fasacrit)
                 return FindFasaHitLocation(mech, hitGroup, iscritical, isrear);
             break;
         default:
-            if (mudconf.btech_fasacrit)
+            if (MechSpecials(mech) & CRITPROOF_TECH)
+                return FindHitLocation_CritProof(mech, hitGroup, iscritical, isrear);
+            else if (mudconf.btech_fasacrit)
                 return FindFasaHitLocation(mech, hitGroup, iscritical, isrear);
             break;
     }
@@ -1835,6 +2349,7 @@ int FindHitLocation(MECH * mech, int hitGroup, int *iscritical,
 
                 case FRONT:
                 case BACK:
+                    side = (hitGroup == FRONT ? FSIDE : BSIDE);
                     switch (roll) {
                         case 2:
                             hitloc = ROTOR;
@@ -1851,7 +2366,7 @@ int FindHitLocation(MECH * mech, int hitGroup, int *iscritical,
                         case 7:
                         case 8:
                         case 9:
-                            hitloc = FSIDE;
+                            hitloc = side;
                             break;
                         case 10:
                         case 11:
